# Eagle-Eye-SOC-Platform

./: .gitignore  EagleEye.spec  LICENSE  README.md  main.py  pyproject.toml  run_eagle_eye.bat
.github/workflows/: windows-build.yml
configs/: lab-storage.bicep  logic-app-remediation.bicep  sentinel-public-storage-change.kql  shuffle-workflow-blueprint.json  sysmon-config.xml  thehive-case-payload.json  wazuh-agent-eventchannels.xml  wazuh-local-rules.xml
demo/: ad_events.json  azure_activity.json  phishing_message.eml  siem_events.json
docs/: ARCHITECTURE.md  BUILD_STATUS.md  GITHUB_PUBLISHING.md  SECURITY.md  USER_GUIDE.md  VISUALS.md  WINDOWS_BUILD_VERIFICATION.md
docs/uml/: class-diagram.mmd  incident-analysis-sequence.mmd  system-architecture.mmd
eagle_eye/: __init__.py  app.py  database.py  models.py  paths.py  secrets.py  workers.py
eagle_eye/assets/: styles.qss
eagle_eye/services/: active_directory.py  automation.py  azure.py  common.py  phishing.py  reporting.py  siem.py
eagle_eye/ui/: analysis_pages.py  automation_page.py  common.py  dashboard.py  main_window.py  phishing_page.py  settings_page.py
installer/: EagleEye.iss
scripts/: New-LabDomain.ps1  build_windows.ps1  install_windows.ps1  publish_to_github.ps1
tests/: test_active_directory.py  test_automation.py  test_azure.py  test_database.py  test_phishing.py  test_siem.py
