[project]
name = "eagle-eye-soc-platform"
version = "1.0.0"
description = "Unified Windows SOC desktop platform for SIEM, Active Directory, phishing, Azure security and SOAR workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Upenyu Hlangabeza"}]
dependencies = [
  "PySide6>=6.7,<7",
  "requests>=2.32,<3",
  "keyring>=25,<26"
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10,<7"
]

[project.scripts]
eagle-eye = "eagle_eye.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
